--- a/css/monsterStyles.css
+++ b/css/monsterStyles.css
@@ -4,25 +4,27 @@
 .container { max-width: 960px; margin: 0 auto; }
 .alignleft { float: left; }
 .alignright { float: right; }
-.col-half { width: 46%; margin: 2%; float: left; background: #4e4e4e;}
+.col-half { width: 50%; float: left; }
 .col-1thrids { width: 33%; float: left; }
 .col-2thrids { width: 66%;  float: left; }
 .col-1quarters { width: 25%; float: left; }
 .col-3quarters { width: 75%; float: left; }
 
 /* == ACCORDIAN NAV ==== */ 
+.accordion { position: relative; z-index: 100; }
 .accordion dt, .accordion dd { width: 96%; padding: 2%; }
 .accordion dt { border-top: 1px solid #fbfbeb; border-right: 1px solid #808284; border-bottom:  1px solid #808284; border-left: #fbfbeb;  background: #bdbcaf; }
 .accordion a { text-align: center; text-decoration: none; display: block; }
-.accordion dd { overflow: hidden; background: #fbfbeb; }
+.accordion dd { margin-left: 0; border-left: 1px solid #bdbcaf; border-right: 1px solid #bdbcaf; overflow: hidden; background: #fbfbeb; }
 
 /* === OPERATING TABLE == */
-.operatingTable{ background: #eee; }
+.operatingTable{ background:; position: relative; z-index: 1;}
 
 .mBlank { height: 205px; width: 390px; margin: 0 auto; border: 1px solid magenta; display: block; }
 
 /* == CHOICES ==== */
 /* = MONSTER HEADS = */
+.m-head { position: relative; z-index: 200;}
 .m1-head { height: 100px; width: 100px; background: url(../images/m1-head.png) top center no-repeat; }
 .m2-head { height: 100px; width: 100px; border-radius: 50%; background: #dbb5b2; }
 .m3-head { height: 100px; width: 100px; border-radius: 50%; background: #d28b01; }
@@ -47,7 +49,9 @@
 .m5-food{ height: 100px; width: 100px; background: #795cd6; }
 .m6-food{ height: 100px; width: 100px; background: #921423; }
 
+/* = UI Elements ===*/
 
+.dragging { opacity: 0.5; }
 
 
 
