--- a/css/monsterStyles.css
+++ b/css/monsterStyles.css
@@ -20,38 +20,37 @@
 /* === OPERATING TABLE == */
 .operatingTable{ position: relative; z-index: 1;}
 
-.mBlank { height: 205px; width: 390px; margin: 0 auto; border: 1px solid magenta; display: block; }
+.mBlank { height: 205px; width: 100%; display: block; background: #ccc;  }
 
-#mHead { height: 205px; width: 100%; display: block; background: #bbb; }
-#mBody { height: 205px; width: 100%; display: block; background: #ccc; }
-#mFood { height: 205px; width: 100%; display: block; background: #aaa; }
+#mHead { height: 205px; width: 390px; margin: 0 auto; display: block; position: relative; z-index: 200; }
+#mBody { height: 205px; width: 390px; margin: -50px auto 0 auto; display: block; position: relative; z-index: 100; }
+#mFood { height: 205px; width: 390px; margin: 0 auto; display: block; position: relative; z-index: 300; }
 
 /* == CHOICES ==== */
 /* = MONSTER HEADS = */
-.m-head { position: relative; z-index: 200;}
-.m1-head { height: 100px; width: 100px; background: url(../images/m1-head.png) top center no-repeat; }
-.m2-head { height: 100px; width: 100px; border-radius: 50%; background: #dbb5b2; }
-.m3-head { height: 100px; width: 100px; border-radius: 50%; background: #d28b01; }
-.m4-head { height: 100px; width: 100px; border-radius: 50%; background: #67a40f; }
-.m5-head { height: 100px; width: 100px; border-radius: 50%; background: #795cd6; }
-.m6-head { height: 100px; width: 100px; border-radius: 50%; background: #921423; }
+.m1-head { height: 100px; width: 100px; background: url(../images/m1-head.png) top center no-repeat; background-size: auto 100%; }
+.m2-head { height: 100px; width: 100px; border-radius: 50%; background: #dbb5b2; background-size: auto 100%; }
+.m3-head { height: 100px; width: 100px; border-radius: 50%; background: #d28b01; background-size: auto 100%; }
+.m4-head { height: 100px; width: 100px; border-radius: 50%; background: #67a40f; background-size: auto 100%; }
+.m5-head { height: 100px; width: 100px; border-radius: 50%; background: #795cd6; background-size: auto 100%; }
+.m6-head { height: 100px; width: 100px; border-radius: 50%; background: #921423; background-size: auto 100%; }
 
 /* = MONSTER BODIES = */
-.m1-body{ height: 100px; width: 100px; background: url(../images/m1-body.png) top center no-repeat; }
-.m2-body{ height: 100px; width: 100px; border-radius: 10%; background: #dbb5b2; }
-.m3-body{ height: 100px; width: 100px; border-radius: 10%; background: #d28b01; }
-.m4-body{ height: 100px; width: 100px; border-radius: 10%; background: #67a40f; }
-.m5-body{ height: 100px; width: 100px; border-radius: 10%; background: #795cd6; }
-.m6-body{ height: 100px; width: 100px; border-radius: 10%; background: #921423; }
+.m1-body{ height: 100px; width: 100px; background: url(../images/m1-body.png) top center no-repeat; background-size: 100% auto; }
+.m2-body{ height: 100px; width: 100px; border-radius: 10%; background: #dbb5b2; background-size: auto 100%; }
+.m3-body{ height: 100px; width: 100px; border-radius: 10%; background: #d28b01; background-size: auto 100%; }
+.m4-body{ height: 100px; width: 100px; border-radius: 10%; background: #67a40f; background-size: auto 100%; }
+.m5-body{ height: 100px; width: 100px; border-radius: 10%; background: #795cd6; background-size: auto 100%; }
+.m6-body{ height: 100px; width: 100px; border-radius: 10%; background: #921423; background-size: auto 100%; }
 
 
 /* = MONSTER FOODS = */
-.m1-food{ height: 100px; width: 100px; background: #2e87be; }
-.m2-food{ height: 100px; width: 100px; background: #dbb5b2; }
-.m3-food{ height: 100px; width: 100px; background: #d28b01; }
-.m4-food{ height: 100px; width: 100px; background: #67a40f; }
-.m5-food{ height: 100px; width: 100px; background: #795cd6; }
-.m6-food{ height: 100px; width: 100px; background: #921423; }
+.m1-food{ height: 100px; width: 100px; background: #2e87be; background-size: auto 100%; }
+.m2-food{ height: 100px; width: 100px; background: #dbb5b2; background-size: auto 100%; }
+.m3-food{ height: 100px; width: 100px; background: #d28b01; background-size: auto 100%; }
+.m4-food{ height: 100px; width: 100px; background: #67a40f; background-size: auto 100%; }
+.m5-food{ height: 100px; width: 100px; background: #795cd6; background-size: auto 100%; }
+.m6-food{ height: 100px; width: 100px; background: #921423; background-size: auto 100%; }
 
 /* = UI Elements ===*/
 
