Third Draft: Added Images

--- a/css/monsterStyles.css
+++ b/css/monsterStyles.css
@@ -22,26 +22,26 @@
 
 .mBlank { height: 205px; width: 100%; display: block; background: #ccc;  }
 
-#mHead { height: 205px; width: 390px; margin: 0 auto; display: block; position: relative; z-index: 200; }
-#mBody { height: 205px; width: 390px; margin: -50px auto 0 auto; display: block; position: relative; z-index: 100; }
-#mFood { height: 205px; width: 390px; margin: 0 auto; display: block; position: relative; z-index: 300; }
+#mHead { height: 238px; width: 400px; margin: 0 auto; display: block; position: relative; z-index: 200; }
+#mBody { height: 255px; width: 400px; margin: -65px auto 0 auto; display: block; position: relative; z-index: 100; }
+#mFood { height: 562px; width: 400px; margin: -190px auto 0 auto; display: block; position: relative; z-index: 300; background: url(../images/counter.png) top center no-repeat; }
 
 /* == CHOICES ==== */
 /* = MONSTER HEADS = */
-.m1-head { height: 100px; width: 100px; background: url(../images/m1-head.png) top center no-repeat; background-size: auto 100%; }
-.m2-head { height: 100px; width: 100px; border-radius: 50%; background: #dbb5b2; background-size: auto 100%; }
-.m3-head { height: 100px; width: 100px; border-radius: 50%; background: #d28b01; background-size: auto 100%; }
-.m4-head { height: 100px; width: 100px; border-radius: 50%; background: #67a40f; background-size: auto 100%; }
-.m5-head { height: 100px; width: 100px; border-radius: 50%; background: #795cd6; background-size: auto 100%; }
-.m6-head { height: 100px; width: 100px; border-radius: 50%; background: #921423; background-size: auto 100%; }
+.m1-head { height: 134px; width: 225px; background: url(../images/m1-head.png) top center no-repeat; background-size: 100%; }
+.m2-head { height: 134px; width: 225px; background: url(../images/m2-head.png) top center no-repeat; background-size: 100%; }
+.m3-head { height: 134px; width: 225px; background: url(../images/m3-head.png) top center no-repeat; background-size: 100%; }
+.m4-head { height: 134px; width: 225px; background: url(../images/m4-head.png) top center no-repeat; background-size: 100%; }
+.m5-head { height: 134px; width: 225px; border-radius: 50%; background: #795cd6; background-size: auto 100%; }
+.m6-head { height: 134px; width: 225px; border-radius: 50%; background: #921423; background-size: auto 100%; }
 
 /* = MONSTER BODIES = */
-.m1-body{ height: 100px; width: 100px; background: url(../images/m1-body.png) top center no-repeat; background-size: 100% auto; }
-.m2-body{ height: 100px; width: 100px; border-radius: 10%; background: #dbb5b2; background-size: auto 100%; }
-.m3-body{ height: 100px; width: 100px; border-radius: 10%; background: #d28b01; background-size: auto 100%; }
-.m4-body{ height: 100px; width: 100px; border-radius: 10%; background: #67a40f; background-size: auto 100%; }
-.m5-body{ height: 100px; width: 100px; border-radius: 10%; background: #795cd6; background-size: auto 100%; }
-.m6-body{ height: 100px; width: 100px; border-radius: 10%; background: #921423; background-size: auto 100%; }
+.m1-body{ height: 143px; width: 225px; background: url(../images/m1-body.png) top center no-repeat; background-size: 100%; }
+.m2-body{ height: 143px; width: 225px; background: url(../images/m2-body.png) top center no-repeat; background-size: 100%; }
+.m3-body{ height: 143px; width: 225px; background: url(../images/m3-body.png) top center no-repeat; background-size: 100%; }
+.m4-body{ height: 143px; width: 225px; background: url(../images/m4-body.png) top center no-repeat; background-size: 100%; }
+.m5-body{ height: 143px; width: 225px; border-radius: 10%; background: #795cd6; background-size: auto 100%; }
+.m6-body{ height: 143px; width: 225px; border-radius: 10%; background: #921423; background-size: auto 100%; }
 
 
 /* = MONSTER FOODS = */
