--- a/css/monsterStyles.css
+++ b/css/monsterStyles.css
@@ -1,5 +1,68 @@
 @charset "UTF-8";
 /* CSS Document */
+/* ==========================================================================
+   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
+   ========================================================================== */
+
+html,
+button,
+input,
+select,
+textarea {
+    color: #222;
+}
+
+body {
+    font-family: Georgia, Serif;
+    font-size: 1em;
+    line-height: 1.4;
+}
+
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+img {
+    vertical-align: middle;
+}
+
+fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.chromeframe {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
+/* == ALL THINGS TYPE == */
+
+h1, dt { font: small-caps bold 3em/140% "Georgia",sans-serif; text-align: center;}
+dt { font-size: 1em; }
+dt h1 {}
 
 .container { max-width: 960px; margin: 0 auto; }
 .alignleft { float: left; }
@@ -10,12 +73,21 @@
 .col-1quarters { width: 25%; float: left; }
 .col-3quarters { width: 75%; float: left; }
 
+/* == HEADER =========== */
+header { height: 100px; border-bottom: 1px solid #bdbcaf; position: relative; z-index: 800; background: #fbfbeb;
+    -moz-box-shadow:    1px 1px 3px 3px #808284;
+    -webkit-box-shadow: 1px 1px 3px 3px #808284;
+    box-shadow:         1px 1px 3px 3px #808284;
+    }
+    
+nav ul li { display: inline; }
+
 /* == ACCORDIAN NAV ==== */ 
-.accordion { position: relative; z-index: 100; }
+.accordion { border-bottom:  1px solid #808284; position: absolute; top: 56px; z-index: 500;  background: #fbfbeb; }
 .accordion dt, .accordion dd { width: 96%; padding: 2%; }
-.accordion dt { border-top: 1px solid #fbfbeb; border-right: 1px solid #808284; border-bottom:  1px solid #808284; border-left: #fbfbeb;  background: #bdbcaf; }
+.accordion dt { border-bottom:  1px solid #808284; }
 .accordion a { text-align: center; text-decoration: none; display: block; }
-.accordion dd { margin-left: 0; border-left: 1px solid #bdbcaf; border-right: 1px solid #bdbcaf; overflow: hidden; background: #fbfbeb; }
+.accordion dd { margin-left: 0; overflow: hidden; }
 
 /* === OPERATING TABLE == */
 .operatingTable{ position: relative; z-index: 1;}
@@ -28,29 +100,29 @@
 
 /* == CHOICES ==== */
 /* = MONSTER HEADS = */
-.m1-head { height: 134px; width: 225px; background: url(../images/m1-head.png) top center no-repeat; background-size: 100%; }
-.m2-head { height: 134px; width: 225px; background: url(../images/m2-head.png) top center no-repeat; background-size: 100%; }
-.m3-head { height: 134px; width: 225px; background: url(../images/m3-head.png) top center no-repeat; background-size: 100%; }
-.m4-head { height: 134px; width: 225px; background: url(../images/m4-head.png) top center no-repeat; background-size: 100%; }
-.m5-head { height: 134px; width: 225px; border-radius: 50%; background: #795cd6; background-size: auto 100%; }
-.m6-head { height: 134px; width: 225px; border-radius: 50%; background: #921423; background-size: auto 100%; }
+.m1-head { height: 134px; width: 225px; background: url(../images/m1-head.png) top center no-repeat; background-size: 100%; position: relative; z-index: 800; }
+.m2-head { height: 134px; width: 225px; background: url(../images/m2-head.png) top center no-repeat; background-size: 100%; position: relative; z-index: 800; }
+.m3-head { height: 134px; width: 225px; background: url(../images/m3-head.png) top center no-repeat; background-size: 100%; position: relative; z-index: 800; }
+.m4-head { height: 134px; width: 225px; background: url(../images/m4-head.png) top center no-repeat; background-size: 100%; position: relative; z-index: 800; }
+.m5-head { height: 134px; width: 225px; border-radius: 50%; background: #795cd6; background-size: auto 100%; position: relative; z-index: 800; }
+.m6-head { height: 134px; width: 225px; border-radius: 50%; background: #921423; background-size: auto 100%; position: relative; z-index: 800; }
 
 /* = MONSTER BODIES = */
-.m1-body{ height: 143px; width: 225px; background: url(../images/m1-body.png) top center no-repeat; background-size: 100%; }
-.m2-body{ height: 143px; width: 225px; background: url(../images/m2-body.png) top center no-repeat; background-size: 100%; }
-.m3-body{ height: 143px; width: 225px; background: url(../images/m3-body.png) top center no-repeat; background-size: 100%; }
-.m4-body{ height: 143px; width: 225px; background: url(../images/m4-body.png) top center no-repeat; background-size: 100%; }
-.m5-body{ height: 143px; width: 225px; border-radius: 10%; background: #795cd6; background-size: auto 100%; }
-.m6-body{ height: 143px; width: 225px; border-radius: 10%; background: #921423; background-size: auto 100%; }
+.m1-body{ height: 143px; width: 225px; background: url(../images/m1-body.png) top center no-repeat; background-size: 100%; position: relative; z-index: 600; position: relative; z-index: 700; }
+.m2-body{ height: 143px; width: 225px; background: url(../images/m2-body.png) top center no-repeat; background-size: 100%; position: relative; z-index: 600; }
+.m3-body{ height: 143px; width: 225px; background: url(../images/m3-body.png) top center no-repeat; background-size: 100%; position: relative; z-index: 600; }
+.m4-body{ height: 143px; width: 225px; background: url(../images/m4-body.png) top center no-repeat; background-size: 100%; position: relative; z-index: 600; }
+.m5-body{ height: 143px; width: 225px; border-radius: 10%; background: #795cd6; background-size: auto 100%; position: relative; z-index: 600; }
+.m6-body{ height: 143px; width: 225px; border-radius: 10%; background: #921423; background-size: auto 100%; position: relative; z-index: 600; }
 
 
 /* = MONSTER FOODS = */
-.m1-food{ height: 100px; width: 100px; background: #2e87be; background-size: auto 100%; }
-.m2-food{ height: 100px; width: 100px; background: #dbb5b2; background-size: auto 100%; }
-.m3-food{ height: 100px; width: 100px; background: #d28b01; background-size: auto 100%; }
-.m4-food{ height: 100px; width: 100px; background: #67a40f; background-size: auto 100%; }
-.m5-food{ height: 100px; width: 100px; background: #795cd6; background-size: auto 100%; }
-.m6-food{ height: 100px; width: 100px; background: #921423; background-size: auto 100%; }
+.m1-food{ height: 100px; width: 100px; background: #2e87be; background-size: auto 100%; position: relative; z-index: 700; }
+.m2-food{ height: 100px; width: 100px; background: #dbb5b2; background-size: auto 100%; position: relative; z-index: 700; }
+.m3-food{ height: 100px; width: 100px; background: #d28b01; background-size: auto 100%; position: relative; z-index: 700; }
+.m4-food{ height: 100px; width: 100px; background: #67a40f; background-size: auto 100%; position: relative; z-index: 700; }
+.m5-food{ height: 100px; width: 100px; background: #795cd6; background-size: auto 100%; position: relative; z-index: 700; }
+.m6-food{ height: 100px; width: 100px; background: #921423; background-size: auto 100%; position: relative; z-index: 700; }
 
 /* = UI Elements ===*/
 
